--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
+    "@react-email/components": "0.0.19",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.5",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "react-email": "2.1.4",
+    "resend": "^3.3.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
