--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.5",
+    "nanoid": "^5.0.7",
     "pg": "^8.12.0",
     "react-email": "2.1.4",
     "resend": "^3.3.0"
