--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "bun run --hot src/index.ts",
+    "test": "bun test",
     "build": "rm -rf ./build && bun build ./src/index.ts --target bun --outdir ./build",
     "start": "bun run build && bun run ./build/index.js",
     "db:push": "drizzle-kit push",
